# everything-app/file-search/docs/swagger/swagger.json
@@ -445,6 +445,7 @@
                 "email",
                 "full_name",
                 "password",
+                "role",
                 "username"
             ],
             "properties": {
@@ -463,6 +464,13 @@
                 },
                 "phone": {
                     "type": "string"
+                },
+                "role": {
+                    "type": "string",
+                    "enum": [
+                        "admin",
+                        "operator"
+                    ]
                 },
                 "username": {
                     "type": "string"
